--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -8,5 +8,5 @@ body {
     font-family: Poppins, sans-serif;
     display: flex;
     flex-direction: column;
-    background-color: #72795B;
+    /* background-color: #72795B; */
 }
