--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -1,1 +1,21 @@
-<p>footer works!</p>
+<footer class="bottom-nav">
+    <a routerLink="/home" routerLinkActive="active">
+        <mat-icon>home</mat-icon>
+        <span>Hem</span>
+    </a>
+
+    <a routerLink="/tracking" routerLinkActive="active">
+        <mat-icon>sports_baseball</mat-icon>
+        <span>Träning</span>
+    </a>
+
+    <a routerLink="/history" routerLinkActive="active">
+        <mat-icon>history</mat-icon>
+        <span>Historik</span>
+    </a>
+
+    <a routerLink="/profile" routerLinkActive="active">
+        <mat-icon>account_circle</mat-icon>
+        <span>Profil</span>
+    </a>
+</footer>
