--- a/frontend/src/app/shared/navbar/navbar.component.css
+++ b/frontend/src/app/shared/navbar/navbar.component.css
@@ -1,4 +1,4 @@
-.bottom-nav {
+/* .bottom-nav {
     position: fixed;
     bottom: 0;
     width: 100%;
@@ -28,5 +28,68 @@
 
     .active {
         color: #4A7390;
+    }
+} */
+
+
+.bottom-nav {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background: white;
+    display: flex;
+    justify-content: space-around;
+    padding: 10px 0;
+    box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+    transition: all 0.3s ease-in-out;
+}
+
+.bottom-nav a {
+    text-decoration: none;
+    color: rgb(51, 49, 49);
+    text-align: center;
+    font-size: 12px;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.bottom-nav a mat-icon {
+    font-size: 30px;
+    width: 100%;
+    height: 100%;
+    margin-bottom: 3px;
+}
+
+.bottom-nav .active {
+    color: hotpink;
+}
+
+/* När skärmen är större än 768px (t.ex. iPad eller desktop) */
+@media (min-width: 768px) {
+    .bottom-nav {
+        flex-direction: column;
+        width: 80px;
+        /* Justera efter behov */
+        height: 100vh;
+        border-top: none;
+
+        top: 0;
+        bottom: auto;
+        left: 0;
+        justify-content: flex-start;
+        padding-top: 20px;
+        box-shadow: 2px 0px 5px rgba(0, 0, 0, 0.1);
+    }
+
+    .bottom-nav a {
+        flex: none;
+        padding: 15px 0;
+    }
+
+    .bottom-nav a mat-icon {
+        margin-bottom: 5px;
     }
 }
