--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -1,3 +1,1 @@
-<p>home works!</p>
-<app-header />
-<img class="logotype" src="assets/img/logo.png" alt="logotype">
+<section class="home-wrapper"></section>
