--- a/frontend/src/app/pages/auth/auth.component.css
+++ b/frontend/src/app/pages/auth/auth.component.css
@@ -68,3 +68,13 @@ button:hover {
 .login__form input {
     border: 1px solid #4A7390 !important;
 }
+
+.success-message {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+    text-align: center;
+    margin-bottom: 15px;
+    font-weight: bold;
+}
