--- a/frontend/src/app/pages/history/history.component.html
+++ b/frontend/src/app/pages/history/history.component.html
@@ -1,15 +1,19 @@
-<h2>Träningshistorik</h2>
+<section class="history-wrapper">
+
+    <h2>Träningshistorik</h2>
 
 
-<ul *ngIf="recentSessions.length > 0; else noTrainings">
-    <li *ngFor="let session of recentSessions; trackBy: trackByDate">
-        <strong>{{ session.date }}:</strong> {{ session.title }} - {{ session.details }}
-    </li>
-</ul>
+    <ul *ngIf="recentSessions.length > 0; else noTrainings">
+        <li *ngFor="let session of recentSessions; trackBy: trackByDate">
+            <strong>{{ session.date }}:</strong> {{ session.title }} - {{ session.details }}
+        </li>
+    </ul>
 
-<ng-template #noTrainings>
-    <p>Inga träningspass registrerade ännu!</p>
-</ng-template>
+    <ng-template #noTrainings>
+        <p>Inga träningspass registrerade ännu!</p>
+    </ng-template>
 
 
-<app-calendar [recentSessions]="recentSessions"></app-calendar>
+    <app-calendar [recentSessions]="recentSessions"></app-calendar>
+
+</section>
