--- a/frontend/src/app/pages/profile/profile.component.css
+++ b/frontend/src/app/pages/profile/profile.component.css
@@ -2,7 +2,6 @@
     background-color: var(--bg-light-blue);
     padding: 20px;
     height: 100%;
-
 }
 
 .header {
@@ -170,25 +169,6 @@ ul {
     color: black;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .profile-card {
     background: white;
     padding: 20px;
@@ -256,6 +236,49 @@ ul {
     margin-top: 20px;
 }
 
-button mat-icon {
-    margin-right: 6px;
+
+.btn__add {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    background: var(--primary-color);
+    color: white;
+    padding: 8px;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 14px;
+    transition: background 0.3s;
+}
+
+
+
+.select__btns {
+    margin-bottom: 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+::ng-deep .no-outline .mdc-notched-outline {
+    display: none !important;
+}
+
+.no-outline {
+    width: 100px;
+}
+
+.select__dog-form {
+    display: flex;
+    justify-content: right;
+    align-items: right;
+    margin-bottom: 1rem;
+}
+
+
+.mat-mdc-form-field-infix {
+    width: 100%;
+
 }
