--- a/frontend/src/app/shared/navbar/navbar.component.css
+++ b/frontend/src/app/shared/navbar/navbar.component.css
@@ -28,7 +28,7 @@
 
 .side-menu {
     position: absolute !important;
-    top: 60px;
+    top: 0;
     left: -250px;
     width: 250px;
     height: 100vh;
